k8s/gateway-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-api
  labels:
    app: gateway-api
spec:
  type: ClusterIP
  ports:
    - name: http-api
      targetPort: http-api # Usa el nombre aquí
      port: 80
  selector:
    app: gateway-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api
  labels:
    app: gateway-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
    spec:
      containers:
        - name: gateway-api
          image: gateway-api
          ports:
            - name: http-api # Añade este nombre
              containerPort: 8000
          # Readiness: Evita el "Empty reply".
          # Nginx no enviará tráfico hasta que FastAPI responda "pong" en el puerto 8000.
          readinessProbe:
            httpGet:
              path: /ping # Directo a FastAPI
              port: 8000
            initialDelaySeconds: 2 # FastAPI sube rápido, 2s es suficiente
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          # Liveness: Mantenlo para que Kubernetes reinicie el Pod si el proceso muere.
          livenessProbe:
            httpGet:
              path: /ping
              port: 8000
            initialDelaySeconds: 10 # Dale más margen que al Readiness
            periodSeconds: 10
